<resources>
    <string name="app_name">MyApplication</string>
    <string name="phone_no">Phone No :</string>
    <string name="textview">TextView</string>
    <string name="password">Password</string>

    <string name="page2">page2</string>
    <string name="button">Button</string>
    <string name="textview2">TextView</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="symbol1">|</string>
    <string name="create_account">Create account</string>

    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="enter_phone_no">enter_phone_no</string>
    <string name="imageSlider">imageSlider</string>
    <string name="open">Open nav</string>
    <string name="close">Close nav</string>
    <string name="appBarLayout">appBarLayout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="text_deleteItem">Delete</string>
    <string name="text_cancedeleteitem">Cancel</string>
    <string name="delete_the_item_from_shopping_cart">Delete the item?</string>
    <string name="delete_the_item">Delete the item?</string>


</resources>
