<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="50dp"
    android:padding="20dp"
    android:layout_gravity="center"
    >

    <TextView
        android:gravity="center"
        android:id="@+id/textview_deleteitemalert"
        android:textColor="@color/Black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_the_item"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/textview_deleteitemalert"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        >

        <Button
            android:id="@+id/bttn_confirmdelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_deleteItem"
            />

        <Button
            android:id="@+id/bttn_canceldelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_cancedeleteitem"
         />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>